assets/styles/components/_grid.scss
// Grid system
.main {
  @include make-col-ready;
  @include make-col($grid-columns);

  .sidebar-primary & {
    @include make-col-ready;
    @include make-col($grid-columns);
  }
}

.home,
.page-template-template-elementor {
  .main {
    padding: 0;
  }
  .wrap {
    padding-top: 0;
    padding-bottom: 0;
  }
}

.wrap {
  padding-top: 15px;
  padding-bottom: 15px;
}

.sidebar {
  @include make-col-ready;
  @include make-col($grid-columns);
}

// Small devices (landscape phones, 576px and up)
@include media-breakpoint-up(sm) {}

// Medium devices (tablets, 768px and up)
@include media-breakpoint-up(md) {

  .main {
    .sidebar-primary & {
      @include make-col($grid-columns - $sidebar-columns);
    }
  }
  .sidebar {
    @include make-col($sidebar-columns);
  }

  .wrap {
    padding-top: 40px;
    padding-bottom: 40px;
  }
  .home,
  .page-template-template-elementor {
    .wrap {
      padding-top: 0;
      padding-bottom: 0;
    }
  }
}

// Large devices (desktops, 992px and up)
@include media-breakpoint-up(lg) {
  .single-post .main {
    @include make-col($grid-columns - $sidebar-columns);
  }
}
// Extra large devices (large desktops, 1200px and up)
@include media-breakpoint-up(xl) {}

